--- a/resume.html
+++ b/resume.html
@@ -58,13 +58,13 @@
                                     <div class="row align-items-center gx-5">
                                         <div class="col text-center text-lg-start mb-4 mb-lg-0">
                                             <div class="bg-light p-4 rounded-4">
-                                                <div class="text-primary fw-bolder mb-2">Feb 2023 - Present</div>
-                                                <div class="small fw-bolder">Cloud Computing Student at Bangkit Academy 2023</div>
-                                                <div class="small text-muted">Bangkit Academy led y Google, Tokopedia, Gojek & Traveloka</div>
+                                                <div class="text-primary fw-bolder mb-2">Dec 2023 - Sep 2024</div>
+                                                <div class="small fw-bolder">Practicum Assistant</div>
+                                                <div class="small text-muted">Multimedia Application, Big Data, and Cybersecurity Laboratory</div>
                                                 <div class="small text-muted">Bandung, West Java, Indonesia</div>
                                             </div>
                                         </div>
-                                        <div class="col-lg-8"><div>An independent study program, the Cloud Computing Learning Path. Receive competency certificates in each class in the Cloud Computing Learning Path if successfully pass each test/assessment held for each competency. After participating in this program, are prepared to take the Associate Cloud Engineer global certification exam from Google which can be taken after completing all of this Certified Independent Study material.</div></div>
+                                        <div class="col-lg-8"><div>Teaching junior students using CrypTool and Linux Program. Developing three practicum modules for regular and international classes in one semester. Sharing knowledge about Basic Linux, Classic and Modern Cryptography, Remote User Authentication, Kerberos Authentication, and TLS/SSL Protocol.</div></div>
                                     </div>
                                 </div>
                             </div>
@@ -75,13 +75,13 @@
                                     <div class="row align-items-center gx-5">
                                         <div class="col text-center text-lg-start mb-4 mb-lg-0">
                                             <div class="bg-light p-4 rounded-4">
-                                                <div class="text-primary fw-bolder mb-2">Feb 2023 - Present</div>
-                                                <div class="small fw-bolder">Coordinator of Financial Division</div>
-                                                <div class="small text-muted">PMK TES Telkom University</div>
+                                                <div class="text-primary fw-bolder mb-2">Oct 2023 - Sept 2024</div>
+                                                <div class="small fw-bolder">Head of Assistant</div>
+                                                <div class="small text-muted">Signal Processing for Intelligent System Laboratory</div>
                                                 <div class="small text-muted">Bandung, West Java, Indonesia</div>
                                             </div>
                                         </div>
-                                        <div class="col-lg-8"><div>Coordinate the Financial Divison and its members, person in charge of making decision for the financial matter in PMK TES. Planning funding and business program to fulfill entire PMK TES 2022 financial necessity. Manage evidence of expenditure and income of funds with a good funding system and monthly financial report</div></div>
+                                        <div class="col-lg-8"><div>Mentoring junior research assistants using Python and MATLAB. Developing three detection systems based on Python and Tensorflow. Authorizing three detection systems as intellectual property rights for laboratory's inventories.</div></div>
                                     </div>
                                 </div>
                             </div>
@@ -91,10 +91,10 @@
                                     <div class="row align-items-center gx-5">
                                         <div class="col text-center text-lg-start mb-4 mb-lg-0">
                                             <div class="bg-light p-4 rounded-4">
-                                                <div class="text-primary fw-bolder mb-2">Aug 2022 - Present</div>
-                                                <div class="small fw-bolder">Practicum Assistant of Cyber Physical System Laboratory</div>
-                                                <div class="small text-muted">Cyber Physical System Laboratory</div>
-                                                <div class="small text-muted">Bandung, West Java, Indonesia</div>
+                                                <div class="text-primary fw-bolder mb-2">Jul 2023 - Sep 2023</div>
+                                                <div class="small fw-bolder">Committee of ASEAN Indonesia 2023</div>
+                                                <div class="small text-muted">PT Telkom Indonesia</div>
+                                                <div class="small text-muted">South Jakarta, DKI Jakarta, Indonesia</div>
                                             </div>
                                         </div>
                                         <div class="col-lg-8"><div>Teaching junior telecommunication engineers as a practicum assistant about Cisco, GNS3, VoIP, and Network Simulator. Compiling six practicum modules for regular and international class for one semester worth. Shares knowledge about Basic Linux, Internet of Things, Web Development, and UI/UX Design.</div></div>
@@ -107,9 +107,25 @@
                                     <div class="row align-items-center gx-5">
                                         <div class="col text-center text-lg-start mb-4 mb-lg-0">
                                             <div class="bg-light p-4 rounded-4">
-                                                <div class="text-primary fw-bolder mb-2"> Jul 2022 - Aug 2022</div>
-                                                <div class="small fw-bolder">Project-Based Intern : UX Researcher Virtual Internship Experience Telkom Digital Amoeba</div>
-                                                <div class="small text-muted">Digital Amoeba Internship</div>
+                                                <div class="text-primary fw-bolder mb-2"> Jun 2023 - Nov 2023</div>
+                                                <div class="small fw-bolder">Project-Based Intern: Kedaireka 2023</div>
+                                                <div class="small text-muted">PT MetaVision Inovasi Indonesia</div>
+                                                <div class="small text-muted">Bandung, West Java, Indonesia</div>
+                                            </div>
+                                        </div>
+                                        <div class="col-lg-8"><div>Finishing various task and responsibilities related with the activity of UX Researcher from Telkom Digital Amoeba, such as Design Thinking UI and UX, Creating User Persona, and Usability Testing Implementation.</div></div>
+                                    </div>
+                                </div>
+                            </div>
+                            <!-- Experience Card 5-->
+                            <div class="card shadow border-0 rounded-4 mb-5">
+                                <div class="card-body p-5">
+                                    <div class="row align-items-center gx-5">
+                                        <div class="col text-center text-lg-start mb-4 mb-lg-0">
+                                            <div class="bg-light p-4 rounded-4">
+                                                <div class="text-primary fw-bolder mb-2"> Feb 2021 - Jul 2021</div>
+                                                <div class="small fw-bolder">Project-Based Intern: </div>
+                                                <div class="small text-muted">PT MetaVision Inovasi Indonesia</div>
                                                 <div class="small text-muted">Bandung, West Java, Indonesia</div>
                                             </div>
                                         </div>
@@ -130,18 +146,18 @@
                                     <div class="row align-items-center gx-5">
                                         <div class="col text-center text-lg-start mb-4 mb-lg-0">
                                             <div class="bg-light p-4 rounded-4">
-                                                <div class="text-secondary fw-bolder mb-2">Sep 2020 - Present</div>
+                                                <div class="text-secondary fw-bolder mb-2">Aug 2020 - Aug 2024</div>
                                                 <div class="mb-2">
                                                     <div class="small fw-bolder">Telkom University</div>
                                                     <div class="small text-muted">Bandung, West Java, Indonesia</div>
                                                 </div>
                                                 <div class="fst-italic">
                                                     <div class="small text-muted">Bachelor Degree</div>
-                                                    <div class="small text-muted">Telecommunication Engineering</div>
+                                                    <div class="small text-muted">Telecommunication Engineering Program</div>
                                                 </div>
                                             </div>
                                         </div>
-                                        <div class="col-lg-8"><div>Activities and societies: Practicum Assistant at Telkom University's CPS Laboratory. Member of Financial Division at PMK Telkom University. Member of Orgata Division at KSR PMI Unit Telkom University</div></div>
+                                        <div class="col-lg-8"><div>Activities and societies: Practicum Assistant of MBC Laboratory. Head Assistant of SPIS Laboratory. Head of Public Relation Division of Championship Regeneration 2021. Exhibition Presenter of 32th Anniversary Telkom University</div></div>
                                     </div>
                                 </div>
                             </div>
@@ -151,18 +167,18 @@
                                     <div class="row align-items-center gx-5">
                                         <div class="col text-center text-lg-start mb-4 mb-lg-0">
                                             <div class="bg-light p-4 rounded-4">
-                                                <div class="text-secondary fw-bolder mb-2">Aug 2017 - Apr 2020</div>
+                                                <div class="text-secondary fw-bolder mb-2">Jun 2016 - Jul 2019</div>
                                                 <div class="mb-2">
-                                                    <div class="small fw-bolder">SMA Regina Pacis Surakarta</div>
-                                                    <div class="small text-muted">Bandung, West Java, Indonesia</div>
+                                                    <div class="small fw-bolder">SMA Labschool Cibubur</div>
+                                                    <div class="small text-muted">Bekasi, West Java, Indonesia</div>
                                                 </div>
                                                 <div class="fst-italic">
                                                     <div class="small text-muted">Graduate</div>
-                                                    <div class="small text-muted">Science Program</div>
+                                                    <div class="small text-muted">Nature Science Program</div>
                                                 </div>
                                             </div>
                                         </div>
-                                        <div class="col-lg-8"><div>Activities and societies: English Short Story High School Competition. Member of Recistroops's Go Green Movement, part of OSIS Regina Pacis</div></div>
+                                        <div class="col-lg-8"><div>Activities and societies: Creative Team of CRAVIER 2018. Member of English Club. Prosperity Mosque Member of Islamic Affairs</div></div>
                                     </div>
                                 </div>
                             </div>
@@ -218,7 +234,7 @@
         <footer class="bg-white py-4 mt-auto">
             <div class="container px-5">
                 <div class="row align-items-center justify-content-between flex-column flex-sm-row">
-                    <div class="col-auto"><div class="small m-0">Copyright &copy; Novita Risdanti Portofolio 2023</div></div>
+                    <div class="col-auto"><div class="small m-0">Copyright &copy; Danny Aulia 2024e</div></div>
                     <div class="col-auto">
                         <a class="small" href="#!">Privacy</a>
                         <span class="mx-1">&middot;</span>
