--- a/projects.html
+++ b/projects.html
@@ -5,9 +5,9 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>Novita Risdanti</title>
+        <title>Danny Aulia</title>
         <!-- Favicon-->
-        <link rel="icon" href="assets/NO Reflect WM.png">
+        <link rel="icon" href="assets/SaintAulia-LogoPNG.png">
         <!-- Custom Google font-->
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -22,7 +22,7 @@
             <!-- Navigation-->
             <nav class="navbar navbar-expand-lg navbar-light bg-white py-3">
                 <div class="container px-5">
-                    <a class="navbar-brand" href="index.html"><span class="fw-bolder text-primary">Novita Risdanti</span></a>
+                    <a class="navbar-brand" href="index.html"><span class="fw-bolder text-primary">Danny Aulia</span></a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="navbar-nav ms-auto mb-2 mb-lg-0 small fw-bolder">
@@ -48,7 +48,7 @@
                                     <div class="d-flex align-items-center">
                                         <div class="p-5">
                                             <h2 class="fw-bolder">Pothole Mapping Internet of Things</h2>
-                                            <p>.... We use sensors such as infrared to detect obstacle within 5cm then the output will be buzzer to alert the user and people around. For the development kit, we use Arduino IDE and ESP 8266 for the microcotroller.</p>
+                                            <p>We developed a sensor that can detect road damage, record location points, classify the level of road damage, and display road damage information on the user application. For the development kit, we used the ADXL345 accelerometer sensor, Arduino Nano ESP 8266, Ublox Neo-6M GPS, and Raspberry Pi 3b+ Broadcom BCM2837B0 CPU. For the mobile application, we used Flutter as the end-user and Firebase as the database.</p>
                                         </div>
                                         <img class="img-fluid" src="assets/iot.jpeg" alt="..." />
                                     </div>
@@ -59,10 +59,22 @@
                                 <div class="card-body p-0">
                                     <div class="d-flex align-items-center">
                                         <div class="p-5">
-                                            <h2 class="fw-bolder">Smart Stick Mobile Application</h2>
+                                            <h2 class="fw-bolder">ASEAN Indonesia 2023 Intranet Data Communication</h2>
                                             <p>Small Project about Internet of Things for Disability People. We use sensors such as infrared to detect obstacle within 5cm then the output will be buzzer to alert the user and people around. For the development, we build mobile application using Android Studio and Kotlin Programming Language. The data from the IoT will stored using Antares and also using Firebase for user email registration databases.</p>
                                         </div>
                                         <img class="img-fluid" src="assets/app.jpeg" alt="..." />
+                                    </div>
+                                </div>
+                            </div>
+                            <!-- Project Card 3-->
+                            <div class="card overflow-hidden shadow rounded-4 border-0">
+                                <div class="card-body p-0">
+                                    <div class="d-flex align-items-center">
+                                        <div class="p-5">
+                                            <h2 class="fw-bolder">Automatic Body Posture Analysis System Based on Computer Vision and Artificial Intelligence</h2>
+                                            <p>.... We use sensors such as infrared to detect obstacle within 5cm then the output will be buzzer to alert the user and people around. For the development kit, we use Arduino IDE and ESP 8266 for the microcotroller.</p>
+                                        </div>
+                                        <img class="img-fluid" src="assets/iot.jpeg" alt="..." />
                                     </div>
                                 </div>
                             </div>
@@ -84,7 +96,7 @@
         <footer class="bg-white py-4 mt-auto">
             <div class="container px-5">
                 <div class="row align-items-center justify-content-between flex-column flex-sm-row">
-                    <div class="col-auto"><div class="small m-0">Copyright &copy; Novita Risdanti Portofolio 2023</div></div>
+                    <div class="col-auto"><div class="small m-0">Copyright &copy; Danny Aulia 2024</div></div>
                     <div class="col-auto">
                         <a class="small" href="#!">Privacy</a>
                         <span class="mx-1">&middot;</span>
