--- a/projects.html
+++ b/projects.html
@@ -50,7 +50,7 @@
                                             <h2 class="fw-bolder">Pothole Mapping Internet of Things</h2>
                                             <p>We developed a sensor that can detect road damage, record location points, classify the level of road damage, and display road damage information on the user application. For the development kit, we used the ADXL345 accelerometer sensor, Arduino Nano ESP 8266, Ublox Neo-6M GPS, and Raspberry Pi 3b+ Broadcom BCM2837B0 CPU. For the mobile application, we used Flutter as the end-user and Firebase as the database.</p>
                                         </div>
-                                        <img class="img-fluid" src="assets/iot.jpeg" alt="..." />
+                                        <img class="img-fluid" src="assets/img/IoT-Mapping.jpg" alt="..." />
                                     </div>
                                 </div>
                             </div>
@@ -62,7 +62,7 @@
                                             <h2 class="fw-bolder">ASEAN Indonesia 2023 Intranet Data Communication</h2>
                                             <p>Small Project about Internet of Things for Disability People. We use sensors such as infrared to detect obstacle within 5cm then the output will be buzzer to alert the user and people around. For the development, we build mobile application using Android Studio and Kotlin Programming Language. The data from the IoT will stored using Antares and also using Firebase for user email registration databases.</p>
                                         </div>
-                                        <img class="img-fluid" src="assets/app.jpeg" alt="..." />
+                                        <img class="img-fluid" src="assets/img/ASEAN-server.jpeg" alt="..." />
                                     </div>
                                 </div>
                             </div>
@@ -74,7 +74,7 @@
                                             <h2 class="fw-bolder">Automatic Body Posture Analysis System Based on Computer Vision and Artificial Intelligence</h2>
                                             <p>.... We use sensors such as infrared to detect obstacle within 5cm then the output will be buzzer to alert the user and people around. For the development kit, we use Arduino IDE and ESP 8266 for the microcotroller.</p>
                                         </div>
-                                        <img class="img-fluid" src="assets/iot.jpeg" alt="..." />
+                                        <img class="img-fluid" src="assets/img/GUI-Detection.jpeg" alt="..." />
                                     </div>
                                 </div>
                             </div>
@@ -86,8 +86,8 @@
             <section class="py-5 bg-gradient-primary-to-secondary text-white">
                 <div class="container px-5 my-5">
                     <div class="text-center">
-                        <h2 class="display-4 fw-bolder mb-4">Let's build something together</h2>
-                        <a class="btn btn-outline-light btn-lg px-5 py-3 fs-6 fw-bolder" href="contact.html">Contact me</a>
+                        <h2 class="display-4 fw-bolder mb-4">Let's create together!</h2>
+                        <a class="btn btn-outline-light btn-lg px-5 py-3 fs-6 fw-bolder" href="contact.html">Chat Me</a>
                     </div>
                 </div>
             </section>
