--- a/projects.html
+++ b/projects.html
@@ -7,7 +7,7 @@
         <meta name="author" content="" />
         <title>Danny Aulia</title>
         <!-- Favicon-->
-        <link rel="icon" href="assets/SaintAulia-LogoPNG.png">
+        <link rel="icon" href="assets/img/SaintAulia-LogoPNG.png">
         <!-- Custom Google font-->
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -55,14 +55,14 @@
                                 </div>
                             </div>
                             <!-- Project Card 2-->
-                            <div class="card overflow-hidden shadow rounded-4 border-0">
+                            <div class="card overflow-hidden shadow rounded-4 border-0 mb-5">
                                 <div class="card-body p-0">
                                     <div class="d-flex align-items-center">
                                         <div class="p-5">
                                             <h2 class="fw-bolder">ASEAN Indonesia 2023 Intranet Data Communication</h2>
-                                            <p>Small Project about Internet of Things for Disability People. We use sensors such as infrared to detect obstacle within 5cm then the output will be buzzer to alert the user and people around. For the development, we build mobile application using Android Studio and Kotlin Programming Language. The data from the IoT will stored using Antares and also using Firebase for user email registration databases.</p>
+                                            <p>Project-based internship related to ASEAN Indonesia data communication network 2023. To monitor the network, we used Console Cacti and Centreon. To adjust the system, we used Putty and Command Prompt.</p>
                                         </div>
-                                        <img class="img-fluid" src="assets/img/ASEAN-server.jpeg" alt="..." />
+                                        <img class="img-fluid" src="assets/img/ASEAN-Server.jpeg" alt="..." />
                                     </div>
                                 </div>
                             </div>
@@ -72,7 +72,7 @@
                                     <div class="d-flex align-items-center">
                                         <div class="p-5">
                                             <h2 class="fw-bolder">Automatic Body Posture Analysis System Based on Computer Vision and Artificial Intelligence</h2>
-                                            <p>.... We use sensors such as infrared to detect obstacle within 5cm then the output will be buzzer to alert the user and people around. For the development kit, we use Arduino IDE and ESP 8266 for the microcotroller.</p>
+                                            <p>We developed a system that can detect eye, face, and backbone health based on indicators from Perguruan Tinggi Ilmu Kepolisian. For the development kit, we used the WC02 Web camera. For the application, we used Python as the programming base, Machine Learning as the data training, and Tensorflow as the framework.</p>
                                         </div>
                                         <img class="img-fluid" src="assets/img/GUI-Detection.jpeg" alt="..." />
                                     </div>
