--- a/projects.html
+++ b/projects.html
@@ -50,7 +50,7 @@
                                             <h2 class="fw-bolder">Pothole Mapping Internet of Things</h2>
                                             <p>We developed a sensor that can detect road damage, record location points, classify the level of road damage, and display road damage information on the user application. For the development kit, we used the ADXL345 accelerometer sensor, Arduino Nano ESP 8266, Ublox Neo-6M GPS, and Raspberry Pi 3b+ Broadcom BCM2837B0 CPU. For the mobile application, we used Flutter as the end-user and Firebase as the database.</p>
                                         </div>
-                                        <img class="img-fluid" src="assets/img/IoT-Mapping.jpg" alt="..." />
+                                        <img class="img-fluid" src="assets/img/IoT-Mapping(combine).jpeg" alt="..." />
                                     </div>
                                 </div>
                             </div>
@@ -62,7 +62,7 @@
                                             <h2 class="fw-bolder">ASEAN Indonesia 2023 Intranet Data Communication</h2>
                                             <p>Project-based internship related to ASEAN Indonesia data communication network 2023. To monitor the network, we used Console Cacti and Centreon. To adjust the system, we used Putty and Command Prompt.</p>
                                         </div>
-                                        <img class="img-fluid" src="assets/img/ASEAN-Server.jpeg" alt="..." />
+                                        <img class="img-fluid" src="assets/img/ASEAN-Server2.jpeg" alt="..." />
                                     </div>
                                 </div>
                             </div>
@@ -74,7 +74,7 @@
                                             <h2 class="fw-bolder">Automatic Body Posture Analysis System Based on Computer Vision and Artificial Intelligence</h2>
                                             <p>We developed a system that can detect eye, face, and backbone health based on indicators from Perguruan Tinggi Ilmu Kepolisian. For the development kit, we used the WC02 Web camera. For the application, we used Python as the programming base, Machine Learning as the data training, and Tensorflow as the framework.</p>
                                         </div>
-                                        <img class="img-fluid" src="assets/img/GUI-Detection.jpeg" alt="..." />
+                                        <img class="img-fluid" src="assets/img/GUI-Detection(combine).jpeg" alt="..." />
                                     </div>
                                 </div>
                             </div>
