--- a/resume.html
+++ b/resume.html
@@ -81,7 +81,7 @@
                                                 <div class="small text-muted">Bandung, West Java, Indonesia</div>
                                             </div>
                                         </div>
-                                        <div class="col-lg-8"><div>Mentoring junior research assistants using Python and MATLAB. Developing three detection systems based on Python and Tensorflow. Authorizing three detection systems as intellectual property rights for laboratory's inventories.</div></div>
+                                        <div class="col-lg-8"><div>Mentoring junior research assistants using Python and MATLAB. Developing three detection systems based on Python and Tensorflow. Authorizing three detection systems as intellectual property rights for the laboratory's inventories.</div></div>
                                     </div>
                                 </div>
                             </div>
@@ -92,12 +92,12 @@
                                         <div class="col text-center text-lg-start mb-4 mb-lg-0">
                                             <div class="bg-light p-4 rounded-4">
                                                 <div class="text-primary fw-bolder mb-2">Jul 2023 - Sep 2023</div>
-                                                <div class="small fw-bolder">Committee of ASEAN Indonesia 2023</div>
+                                                <div class="small fw-bolder">Committee</div>
                                                 <div class="small text-muted">PT Telkom Indonesia</div>
                                                 <div class="small text-muted">South Jakarta, DKI Jakarta, Indonesia</div>
                                             </div>
                                         </div>
-                                        <div class="col-lg-8"><div>Teaching junior telecommunication engineers as a practicum assistant about Cisco, GNS3, VoIP, and Network Simulator. Compiling six practicum modules for regular and international class for one semester worth. Shares knowledge about Basic Linux, Internet of Things, Web Development, and UI/UX Design.</div></div>
+                                        <div class="col-lg-8"><div>Managing data communication network for ASEAN Indonesia 2023 state event facilities under the Ministry of Finance and Central Bank. Installing several network access points for connections on several floors of the building. Monitoring network stability and communication services such as live streaming.</div></div>
                                     </div>
                                 </div>
                             </div>
@@ -108,12 +108,12 @@
                                         <div class="col text-center text-lg-start mb-4 mb-lg-0">
                                             <div class="bg-light p-4 rounded-4">
                                                 <div class="text-primary fw-bolder mb-2"> Jun 2023 - Nov 2023</div>
-                                                <div class="small fw-bolder">Project-Based Intern: Kedaireka 2023</div>
+                                                <div class="small fw-bolder">Research Intern</div>
                                                 <div class="small text-muted">PT MetaVision Inovasi Indonesia</div>
                                                 <div class="small text-muted">Bandung, West Java, Indonesia</div>
                                             </div>
                                         </div>
-                                        <div class="col-lg-8"><div>Finishing various task and responsibilities related with the activity of UX Researcher from Telkom Digital Amoeba, such as Design Thinking UI and UX, Creating User Persona, and Usability Testing Implementation.</div></div>
+                                        <div class="col-lg-8"><div>Developing three of the seven detection systems assigned to Team 1, including Eye Detection, Face Detection, and Backbone Detection. Collaborating with POLRI and TNI AD. Training data using Machine Learning to achieve an accuracy value of 90%. Optimizing the system so that anomalous data can be calculated. Registering three detection systems as Intellectual Property Rights.</div></div>
                                     </div>
                                 </div>
                             </div>
@@ -124,12 +124,28 @@
                                         <div class="col text-center text-lg-start mb-4 mb-lg-0">
                                             <div class="bg-light p-4 rounded-4">
                                                 <div class="text-primary fw-bolder mb-2"> Feb 2021 - Jul 2021</div>
-                                                <div class="small fw-bolder">Project-Based Intern: </div>
-                                                <div class="small text-muted">PT MetaVision Inovasi Indonesia</div>
+                                                <div class="small fw-bolder">Head of Public Relations</div>
+                                                <div class="small text-muted">SEARCH by Telkom University</div>
                                                 <div class="small text-muted">Bandung, West Java, Indonesia</div>
                                             </div>
                                         </div>
-                                        <div class="col-lg-8"><div>Finishing various task and responsibilities related with the activity of UX Researcher from Telkom Digital Amoeba, such as Design Thinking UI and UX, Creating User Persona, and Usability Testing Implementation.</div></div>
+                                        <div class="col-lg-8"><div>Collaborating with several media partners for information related to the event. Signing several Memorandum of Understanding from media partners and the committee. Evaluating the development of PR members related to cooperation contracts, the target number of media partners, and participating participants.</div></div>
+                                    </div>
+                                </div>
+                            </div>
+                            <!-- Experience Card 6-->
+                            <div class="card shadow border-0 rounded-4 mb-5">
+                                <div class="card-body p-5">
+                                    <div class="row align-items-center gx-5">
+                                        <div class="col text-center text-lg-start mb-4 mb-lg-0">
+                                            <div class="bg-light p-4 rounded-4">
+                                                <div class="text-primary fw-bolder mb-2"> Sep 2020 - Dec 2020</div>
+                                                <div class="small fw-bolder">Surveyor</div>
+                                                <div class="small text-muted">PT LAPI ITB</div>
+                                                <div class="small text-muted">East Jakarta, DKI Jakarta, Indonesia</div>
+                                            </div>
+                                        </div>
+                                        <div class="col-lg-8"><div>Conducting network quality surveys at customer and enterprise units. Checking devices and problematic network locations. Recording network traffic and consumer complaints. Escalating all reports to the Technical unit.</div></div>
                                     </div>
                                 </div>
                             </div>
